--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/responsive.css">
 </head>
 <body>
+    <header><img src="https://bit.ly/33n7xhX" id="logo-img">cosmic Pizza</header>
     
 </body>
 </html>
