--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Order your cosmic pizza!</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png" sizes="192x192">
     <link rel="stylesheet" href="assets/responsive.css">
 </head>
 <body>
-    <header><img src="https://bit.ly/33n7xhX" id="logo-img">cosmic Pizza</header>
+    <div class="one">
+        <h1> Welcome to Cosmic pizza</h1>
+    </div>
+    <div class="grid-container">
+      
     
 </body>
 </html>
